Updated tests to new library API.
(cherry picked from commit 4ecd91bf8a084a956eb675ffcfb3e8b47119578e)

# Conflicts:
#	src/main/java/org/orekit/propagation/analytical/gnss/FieldGnssPropagator.java
#	src/main/java/org/orekit/propagation/analytical/gnss/GNSSPropagator.java
#	src/test/java/org/orekit/files/rinex/navigation/NavigationFileParserTest.java
#	src/test/java/org/orekit/gnss/SEMParserTest.java
#	src/test/java/org/orekit/gnss/YUMAParserTest.java
#	src/test/java/org/orekit/propagation/analytical/gnss/GPSPropagatorTest.java
#	src/test/java/org/orekit/propagation/analytical/gnss/GnssGradientConverterTest.java